--- a/structurepreservingnotes/LaTeX_DL_468198_240419/articolo.tex
+++ b/structurepreservingnotes/LaTeX_DL_468198_240419/articolo.tex
@@ -597,10 +597,10 @@ Specifically, \(\supp(\tilde{A}_R)_{>1} \subset \colP\) represents the set of in
   Given an LP problem \eqref{eq:LP}, we say that a weighted aggregation with respect to partitions \(\rowP, \colP\) is \emph{structure-preserving} if for each \(R \in \rowP\) and each \(r \in R\), there exists \(f^r: [\tilde{n}] \to [n]\)  such that:
   \begin{enumerate}
     \item \( f^r|_{\supp(\tilde{A}_{R})}: \supp(\tilde{A}_{R})_{>1} \to \supp(A_{r})_{>1}\) is a bijection such that
-    \[\tilde{A}_{R,C} = A_{r,f^r(C)} \text{ for all } C \in \supp(\tilde{A}_{R,S})_{>1}\]
-    \item \(f^r|_{\colP_{=1}} = Id_{\colP_{=1}}\)
-    \item \(f^{r'}(C') = f^r(C)\) then \( C=C'\)
-    \item \(\{f^r(C)\}_{r\in R \in \rowP_{>1}, C \in \colP_{>1}} = \cup_{C \in \colP_{>1}}C\)
+    \[\tilde{A}_{R,C} = A_{r,f^r(C)} \text{ for all } C \in \supp(\tilde{A}_{R,S})_{>1}\].
+    \item \(f^r|_{\colP_{=1}} = Id_{\colP_{=1}}\).
+    \item \(f^{r'}(C') = f^r(C)\) then \( C=C'\).
+    \item \(C = \{f^r(C)\}_{_{r\in R}}\) for all \(R \in \rowP_{>1}\). %\(\{f^r(C)\}_{r\in R \in \rowP_{>1}, C \in \colP_{>1}} = \cup_{C \in \colP_{>1}}C\)
   \end{enumerate}
 \end{definition}
 
@@ -749,9 +749,13 @@ If \(\rho_r \geq 0\) and \(x \in \bR^n\) satisfies \(x_{\colP_{=1}} = \tilde{x}_
 
 A structure-preserving aggregation does not inherently ensure the feasibility of all constraints in the original problem. However, Observation \ref{ob:aggrconstr} demonstrates how to partially reconstruct a solution \(x\) for a specific constraint \(r\) by scaling the aggregated variables appropriately within the support of \(A_r\).
 
-The challenge in constructing a feasible solution for all constraints arises when defining \(x_{f^r(C)} \coloneqq \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)\) and \(C \in \colP_{>1}\). In such cases, \(x\) may not be well defined if \(f^r(C) = f^{r'}(C)\) but \(\rho_r \neq \rho_{r'}\). To address this, \(x_{f^r(C)}\) is defined by selecting a subset \(\rowP' \subset \rowP\) such that \(x\) remains well defined.
-
-The constraints, for which however \(\rowP' \subset \rowP\) is picked, are feasible for \(x\) are referred to as \(\rho\)-agnosti and are defined as follows:  
+The challenges in constructing a feasible solution are two:
+\begin{enumerate}
+  \item If \(x_{f^r(C)} \coloneqq \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)\) and \(C \in \colP_{>1}\). In such cases, \(x\) may not be well defined if \(f^r(C) = f^{r'}(C)\) but \(\rho_r \neq \rho_{r'}\).
+  \item If \(x\) is well defined, we have recovered a feasible solution for the constraints in \(\rowP_{>1}\) we need to ensure that \(x\) is also feasible for the remaining constraints in \(\rowP_{=1}\).
+\end{enumerate}
+ 
+We call the constraints in \(\rowP \) which are feasible indipendently of how \(\rho\) is picked, \(\rho\)-agnostic and are defined as follows:
 \begin{definition}
   For a structure-preserving, row and column aggregation \((\rowP,\colP)\). A constraint \(r \in [m]\) is \(\rho\)-agnostic if for all \(\rho \in \bR^{\cup_{R \in \rowP_{>1}} R}\) such that \(\omega_R^T\rho_R = 1\) for all \(R \in \rowP_{>1}\)
    and  \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \coloneqq \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)\) for all \(R \in \rowP' \subset \rowP_{>1}\), where \(\tilde{x} \in \bR^{\tilde{n}}\) is a feasible solution to the aggregated problem  and \(\rowP'\) is a subset of \(\rowP\) such that \(x\) is well defined, then \(x\) is feasible for constraint \(r\).
@@ -774,10 +778,10 @@ The constraints, for which however \(\rowP' \subset \rowP\) is picked, are feasi
   Thus constraint \eqref{eq:examplehydrogen}is \(\rho\)-agnostic.
 \end{example}
 
-This is a special instance of the following general observation:
+This is a special instance of the following general observation, note that if \(x\) is well defined, then for all \(C \in \supp(A_{r})_{>1}\), we can pick \(R^{(C)} \in \rowP_{>1}\) so that \(C \in \supp(\tilde{A}_{R^{(C)}})\) and \(x_{f^r(C)} = \rho_r \tilde{x}_C\) for all \(r \in R^{(C)}\) and the definition of \(x\) does not depend on the choice of \(R^{(C)}\).
 \begin{observation}
-  For a structure-preserving, row and column aggregation \((\rowP,\colP)\). A constraint \(r \in \rowP_{=1}\) is \(\rho\)-agnostic if for all \(C \in \supp(A_{r})_{>1}\), let \(R^{(C)} \in \rowP_{>1}\) be so \(C \in \supp(\tilde{A}_{R^{(C)}})\).
-  \[A_{r,f^{r'}(C)} = \rowW_{r'}\tilde{A}_{r,C} \text{ for all } r' \in R^{(C)} \]
+  Le \((\rowP,\colP)\) be a structure-preserving, row and column aggregation. For all \(C \in \supp(A_{r})_{>1}\), let \(R^{(C)} \in \rowP_{>1}\) so that \(x_{f^{r'}(C)} \coloneqq \rho_{r'} \tilde{x}_C\) for all \(r' \in R^{(C)}\). A constraint \(r \in \rowP_{=1}\) is \(\rho\)-agnostic if
+  \[A_{r,f^{r'}(C)} = \rowW_{r'}\tilde{A}_{r,C} \text{ for all } r' \in R^{(C)},\; C \in \colP_{>1} \]
    
 \end{observation}
 
@@ -790,19 +794,18 @@ Since \(\rowW_R^T \rho_R = 1\), we have:
 
 We can now define the hypergraph associated to the aggregation \((\rowP, \colP)\).
 \begin{definition}
-  The \emph{hypergraph associated to the aggregation \((\rowP, \colP)\)} is the hypergraph \(\cN, \cE\) having as nodes the aggregated variables \(\cN \coloneqq \colP_{>1}\) and as edges the subsest of \(\cN\) that appear together in not row-agnostic constraints.
+  The \emph{hypergraph associated to the aggregation \((\rowP, \colP)\)} is the hypergraph \(\cN, \cE\) having as nodes the aggregated variables \(\cN \coloneqq \colP_{>1}\) and as edges the subsest of \(\cN\) that appear together in not row-agnostic aggregated constraints.
 \end{definition}
 
-When two edges (constraints) in the hypergraph, \(r\) and \(r'\), share aggregated variables, the scaling factors \(\rho_r\) and \(\rho_{r'}\) must be equal to maintain consistency. 
-Then if \(\rho_r\) can be defined consistently, by applying observation \ref{ob:aggrconstr}, to all \(r \in R \in \rowP_{>1}\) we can construct a feasible solution for the unaggregated problem \eqref{eq:LPunaggr}. Thus we have: 
+When two edges (constraints) in the hypergraph, \(r\) and \(r'\), share aggregated variables, 
+the scaling factors \(\rho_r\) and \(\rho_{r'}\) must be equal for Observation \ref{ob:aggrconstr} to hold for both \(r\) and \(r'\). 
+From this follows the following:
 \begin{proposition}
 \label{prop:xaggfeasible}
-If \((\rowP, \colP)\) is a structure-preserving aggregation. Let \(\tilde{x}\) be a solution 
-to the aggregated problem \eqref{eq:LPaggr}. If for all \(r \in R \in \rowP_{>1}\) such that  \(\tilde{b}_r - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}} = 0\) we have \(A_{r,\colP_{=1}} = 0\) and \(b_r=0\).
-Define \(\rho_r \coloneqq \frac{b_r - A_{r, \colP_{=1}} \tilde{x}_{\colP_{=1}}}{\tilde{b}_R - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}}}\) for all \(r \in R \in \rowP_{>1}\) such that   \(\tilde{b}_r - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}} \neq 0\). If \(\rho_r \geq 0\) and is constant over the connected components of the hypergraph associated to \((\rowP, \colP)\). 
-Then \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \coloneqq \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)\) and \(C \in \colP_{>1}\) is well defined and is feasible solution for the unaggregated problem \eqref{eq:LP}.
+If \((\rowP, \colP)\) is a structure-preserving aggregation and the constraints in \(\rowP_{=1}\) are \(\rho\)-agnostic. Let \(\tilde{x}\) be a solution 
+to the aggregated problem \eqref{eq:LPaggr}. For all \(r \in R \in \rowP_{>1}\) define \(\rho_r\) as in Observation \ref{ob:aggrconstr}. If \(\rho_r \geq 0\) and is constant over the connected components of the hypergraph associated to \((\rowP, \colP)\). 
+Then \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \coloneqq \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)\) and \(C \in \colP_{>1}\) is well defined and \(x\) is a feasible solution to the unaggregated problem \eqref{eq:LP}.
 \end{proposition}
-
 
 \begin{observation}
   \label{ob:costpreserving}
@@ -812,7 +815,7 @@ Then \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \colon
 \begin{proof}
   Let \(\tilde{x}\) be a solution to the aggregated problem \eqref{eq:LPaggr}. Using observation \ref{ob:rhoconvex}, for all \(C \in \colP_{>1}\) the cost corresponding to the variable \(\tilde{x}_C\) is 
   \[
-  \tilde{c}_C\tilde{x}_C = \tilde{c}_C\sum_{r \in R}\rowW_r\rho_r\tilde{x}_C = \sum_{r \in R}\tilde{c}_C\rowW_r\rho_r\tilde{x}_C  = \sum_{r \in R}c_{f(r,C)}x_{f(r,C)}
+  \tilde{c}_C\tilde{x}_C = \tilde{c}_C(\sum_{r \in R}\rowW_r\rho_r)\tilde{x}_C = \sum_{r \in R}\tilde{c}_C\rowW_r\rho_r\tilde{x}_C  = \sum_{r \in R}c_{f(r,C)}x_{f(r,C)}
   \]
   Which correspond to the cost of the variables \(\{x_{f(r,C)}\}_{r \in R}\). Thus
   \[
@@ -824,27 +827,25 @@ Then \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \colon
 
 While row aggregation of a linear problem is a relaxation of the original problem, the same does not apply to column aggregation. However, the column aggregation used for the  Capacity Expansion Problem in this work is still a relaxation. In general a column aggregation of a linear problem is a relaxation of the original problem whenever it is a \emph{constant-coefficients column aggregation}, that is:
 \begin{definition}
-  A column aggregation  of a linear problem with weights \(\rowW_c,\; c \in C \in \colP \) is a \emph{constant-coefficients column aggregation}  if for all \(c \in C \in \colP\) for all rows \(r \in [m]\), we have \(\rowW_cA_{r,c} = \frac{1}{|C|}\) or  \(\rowW_cA_{r,c} = 0\).  
+  A column aggregation of a linear problem, respect to the column partition \(\colP\), is a \emph{constant-coefficients column aggregation} if, for all \(C \in \colP_{>1}\), the non-zero rows in \(A_C\) are identical.
 \end{definition}
-
-That is if for every set \( C \in \rowP \) of variables that are aggregated together, each variable in \( C \) has the same coefficients in every row of the aggregated problem defined by \( \rowP \) and the coefficient is equal to the aggregation weight of the corresponding variable, except for those rows where all the coefficients of the variables are zero.
-We then substitute the columns corresponding to \( C \) with a vector containing one in every row in which the coefficients in \(C\) are non zero, otherwise we substitute with zero.
 
 \begin{proposition}
 If \((\rowP,\colP)\) is a structure-preserving, constant-coefficients column aggregation,
-if the hypothesis of proposition \ref{prop:xaggfeasible} holds then the aggregated problem \eqref{eq:LPaggr} is exact and \(x\) is an optimal solution.
+if the hypothesis of proposition \ref{prop:xaggfeasible} and observation \ref{ob:costpreserving} are true, then the aggregated problem \eqref{eq:LPaggr} is exact and \(x\) is an optimal solution.
 \end{proposition}
 
-\begin{proof}
-  Since for observation \ref{ob:costpreserving}, the cost of the aggregated problem is equal to the cost of \(x\) in the unaggregated problem, we only need to show that the aggregated problem is a relaxation of the unaggregated problem.
-  Let \(x\) be a solution to the unaggregated problem \eqref{eq:LP}. For all \(C \in \colP_{=1}\) let \(\tilde{x}_C \coloneqq x_C\).
-  Since  \(\{f^r(C)\}_{r \in \cup_{R\in \rowP_{>1}}, C \in \colP} = \cup_{C \in \colP_{>1}}C\), for all \(c \in C \in \colP_{>1}\), exists \(r \in R \in \rowP_{>1}\) and \(C \in \colP_{>1}\) such that \(f^r(C) = c\).
-  Then let \(\tilde{x}_C \coloneqq \sum_{c \in C}A_{r,c}x_c\). Since if \(f^{r}(C)= f^{r'}(C')\) implies that \(C=C'\), \(x\) is well defined.
-  Lastly for all \(R \in \rowP\) we have:
-  \[\tilde{A}_R\tilde{x} = \sum_{r \in R} \left( \sum_{C \in \colP_{=1}}\rowW_rA_{r,c}\tilde{x}_C + \sum_{C\in \supp(\tilde{A}_r)_{>1}} \tilde{x}_C \right) = \sum_{r \in R} \left( \sum_{C \in \colP_{=1}}\rowW_rA_{r,c}x_C + \sum_{C\in \supp(\tilde{A}_r)_{>1}} \sum_{c \in C}A_{r,c}x_c \right) = \sum_{r \in R} \tilde{\rho_r} b_r = \tilde{b}_R 
-  \]
-  \qed
-\end{proof}
+% \begin{proof}
+   Since for observation \ref{ob:costpreserving}, the cost of the aggregated problem is equal to the cost of \(x\) in the unaggregated problem, we only need that the aggregated problem is a relaxation of the unaggregated problem.
+   But this is true since both row aggregations and constant-coefficients column aggregations are are relaxations.
+%   Let \(x\) be a solution to the unaggregated problem \eqref{eq:LP}. For all \(C \in \colP_{=1}\) let \(\tilde{x}_C \coloneqq x_C\).
+%   Since  \(\{f^r(C)\}_{r \in \cup_{R\in \rowP_{>1}}, C \in \colP} = \cup_{C \in \colP_{>1}}C\), for all \(c \in C \in \colP_{>1}\), exists \(r \in R \in \rowP_{>1}\) and \(C \in \colP_{>1}\) such that \(f^r(C) = c\).
+%   Then let \(\tilde{x}_C \coloneqq \sum_{c \in C}A_{r,c}x_c\). Since if \(f^{r}(C)= f^{r'}(C')\) implies that \(C=C'\), \(x\) is well defined.
+%   Lastly for all \(R \in \rowP\) we have:
+%   \[\tilde{A}_R\tilde{x} = \sum_{r \in R} \left( \sum_{C \in \colP_{=1}}\rowW_rA_{r,c}\tilde{x}_C + \sum_{C\in \supp(\tilde{A}_r)_{>1}} \tilde{x}_C \right) = \sum_{r \in R} \left( \sum_{C \in \colP_{=1}}\rowW_rA_{r,c}x_C + \sum_{C\in \supp(\tilde{A}_r)_{>1}} \sum_{c \in C}A_{r,c}x_c \right) = \sum_{r \in R} \tilde{\rho_r} b_r = \tilde{b}_R 
+%   \]
+%   \qed
+% \end{proof}
 }
 
 \subsection{Application to Capacity Expansion Problem}
