--- a/ARTICLE2/template.tex
+++ b/ARTICLE2/template.tex
@@ -325,9 +325,8 @@ Section \ref{section:time-resolution} deals with time aggregation. In subsection
 In subsection \ref{subsection: iter} a method is proposed to iterate through progressively finer time aggregations, in order toconverge to the optimal perfect foresight solution. The use of the RH method defined in the previous section is proposed to select the interval to disaggregate. 
 In subsection \ref{subsection: rho}, the structure of the constraint matrix is exploited to derive conditions under which the aggregated solution is feasible for the disaggregated problem, and the result is used to devise a heuristic for the disaggregation selection. 
 
-\textcolor{red}{
-  Section \ref{section: comp res} contains the computational results: some example outputs from the perfect foresight LP are explored, then the three aggregation-iteration methods are compared over time and number of iterations for convergence.
-}
+Finally, section \ref{section: comp res} contains the computational results: the three aggregation-iteration methods are compared over time and number of iterations for convergence.
+
 %\textcolor{gray}{An appendix is given detailing the scenario generation method used to generate the input scenarios for the model. }
 
 
